setmy-info-docker/setmy-info-rocky-java-ci/src/main/k8s/dev/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: jenkins-deployment
    namespace: jenkins-dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: jenkins
    template:
        metadata:
            labels:
                app: jenkins
        spec:
            containers:
                -   name: jenkins
                    image: setmyinfo/setmy-info-rocky-java-jenkins:latest
                    ports:
                        -   containerPort: 8080
                    volumeMounts:
                        -   name: jenkins-data
                            mountPath: /var/lib/jenkins
            volumes:
                -   name: jenkins-data
                    emptyDir: { }
