setmy-info-docker/setmy-info-rocky-java-ci/src/main/k8s/dev/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: jenkins-service
    namespace: jenkins-dev
spec:
    selector:
        app: jenkins
    ports:
        -   protocol: TCP
            port: 8080
            targetPort: 8080
            nodePort: 2376
    type: NodePort
